--- a/style.css
+++ b/style.css
@@ -191,6 +191,17 @@ footer section{
     width: 80%;
     color: #FFFFFF;
 }
+footer div{
+    justify-content: space-evenly;
+    height: 20vh;
+}
+footer div li{
+    cursor: pointer;
+    font-family: "Roboto";
+    font-weight: 300;
+    justify-content: space-evenly;
+    height: 3vh;
+}
 
 .atendimento{
     display: flex;
@@ -198,7 +209,7 @@ footer section{
     justify-content: space-around;
     align-items: flex-start;
     border: solid tomato;
-    width: 10vw;
+    width: 20vw;
     /* margin-left: 8vw; */
 }
 
@@ -209,6 +220,8 @@ footer section{
     background-color: #3A342F;
     color: #ffff;
     border: none;
+    font-family: "Roboto";
+    font-size: 18px;
 }
 .segundaSessao div{
 display: flex;
@@ -225,6 +238,9 @@ height: 36vh;
     background-color: #ffffff;
     color: #000000;
     border: none;
+    font-family: "Roboto";
+    font-size: 18px;
+    font-weight: bolder;
 }
 
 .terceiraSessao div{
@@ -241,13 +257,13 @@ opacity: 0.5;
 
 
 
-@media (max-width: 500px){
+@media (max-width: 550px){
     .sumir{
     display: none;
 
     }
 }
-@media (max-width: 725px) {
+@media (max-width: 650px) {
     
 .segundaSessao{
     flex-direction: column;
@@ -262,4 +278,24 @@ opacity: 0.5;
 .dog{
     background-size: contain;
 }
+footer section{
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+footer{
+    align-items: center;
+    justify-content: center;
+    height: 90vh;
+}
+footer li, footer div{
+    text-align: center;
+    width: 30vw;
+}
+.atendimento{
+    width: 30vw;
+    flex-direction: column;
+    align-items: center;
+}
+
 }
